# In-vehicle-Infotainment-IVI-System

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SplashScreen.qml  main.cpp
01_IVI/: CMakeLists.txt  Main.qml  SplashScreen.qml  main.cpp
01_IVI/backend/: AssistantManager.cpp  LightsController.h  NavigationManager.cpp  NavigationManager.h  ProfileManager.h  SettingsManager.cpp
01_IVI/components/: BottomNavBar.qml  OnScreenKeyboard.qml  RadioView.qml  RightPanel.qml  SideMenu.qml  TopStatusBar.qml  VehicleOverviewCard.qml
01_IVI/pages/: DashboardPage.qml  LightsPage.qml  MediaPage.qml  ProfilePage.qml  WeatherPage.qml
01_IVI/src/audio/: AudioCompatManager.cpp  AudioCompatManager.h  audioplayer.h  audiosourcebase.cpp  audiosourcebase.h  bluetoothmanager.cpp  btplayer.h  radioplayer.cpp  usbplayer.cpp  usbplayer.h
01_IVI/src/weather/: WeatherAPI.cpp  WeatherAPI.h
backend/: AssistantManager.h  CarDataManager.h  ClimateController.h  LightsController.cpp  ProfileManager.cpp  SettingsManager.h  VoiceAssistant.h
components/: BluetoothSheet.qml  BottomNavBar.qml  RightPanel.qml  SideMenu.qml  UsbView.qml
frontend/: Dashboard.qml
frontend/Pages/: ClimatePage.qml  LightsPage.qml  ProfilePage.qml  SettingsPage.qml
frontend/components/: CenterPanel.qml  RightPanel.qml
pages/: AssistantPage.qml  ClimatePage.qml  DashboardPage.qml  LightsPage.qml  MapPage.qml  MediaPage.qml  ProfilePage.qml  SettingsPage.qml  WeatherPage.qml
src/audio/: AudioCompatManager.cpp  audioplayer.cpp  audioplayer.h  bluetoothmanager.h  btplayer.cpp  radioplayer.h  usbplayer.cpp  usbplayer.h
src/climate/: hvaccontroller.cpp  hvaccontroller.h
src/weather/: WeatherAPI.h
